# zvuk-dl-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  rustfmt.toml
.github/workflows/: build_and_test.yml
src/: config.rs  logger.rs  main.rs  path.rs  zvuk.rs
src/zvuk/: client.rs  dto.rs  entities.rs  gql.rs  mod.rs  models.rs
